CHANGELOG

When		Who		What
======================================================================================
2017-01-143 	Richard Forth   Updated logo
				- updated tagline
				- added a cool intro
2017-01-13 	Richard Forth   Addressed issue #9 Find Large Logs
				 - Mopped up some code and made the additional
				 services check look a bit more polished..
				 - Addressed issue #25 PHP-FPM Logs
				 - Addressed issue #48 Plesk logs (warning)
				 - Addressed issue #49 Detect Plesk
				 - Addressed issue #50 Detect icPanel
				 - Code cleanup and output polishing
				 - Addressed issue #3 Detect Package Updates
				 - Addressed issue #55 bug in package updates
				 on debian and ubuntu systems
				 - Addressed issue #55 bug in package updates
				 - Addressed issue #56 Detect PHP Updates
				 - Added more directories to check for large
				 log files:
				 	- /usr/local/httpd/logs
					- /usr/local/apache/logs
					- /usr/local/apache2/logs
				Will silently continue if these folders dont
				exist.
				- Addressed Issue with wonky arrows, still
				not happy with it though, columns are out of
				whack. #OCD, will raise issue and work it
				proper.
2017-01-13 	Richard Forth   Addressed issue #34 Added more graceful
				message when apache[2]ctl is not found.
2017-01-13 	Richard Forth   Addressed issue #33 Removed Version Number
2016-12-06 	Richard Forth   Addressed issue #23 Low Uptime Warnings
2016-12-05 	Richard Forth   Addressed issue #22 Add advisory message for
				php memory limit of -1
2016-11-25 	Richard Forth   Addressed issue #6 'Check for and report on
				PHP Fatal Errors in the logs'
2016-11-25 	Richard Forth   Merged pull request #20 "fix issues around 
				maxrequestworkers value" by jboulen.
2016-11-25 	Richard Forth   Addressed Issue #5, May need further testing
2016-11-15 	Richard Forth   Addressed Issue #19, Confirmed Fixed.
2016-09-21 	Richard Forth   Addressed Issue #8, Confirmed Fixed.